--- a/index.html
+++ b/index.html
@@ -9,12 +9,43 @@
     <header>
       <h1>Broadway Design</h1>
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Process</a>
-        <a href="#">Work</a>
-        <a href="#">Team</a>
+        <a href="#">Home</a><br>
+        <a href="#">Process</a><br>
+        <a href="#">Work</a><br>
+        <a href="#">Team</a><br>
         <a href="#">Contact</a>
       </nav>
     </header>
+    <div>
+      <h2>Our Process</h2>
+        <h3>Identify</h3>
+          <img src="resources/images/identify.svg" alt="identify symbol">
+          <p>We focus on the most important details.</p>
+        <h3>Understand</h3>
+          <img src="resources/images/understand.svg" alt="understand symbol">
+          <p>We study our projects inside and out.</p>
+        <h3>Execute</h3>
+          <img src="resources/images/execute.svg" alt="execute symbol">
+          <p>We put everything we have into our work.</p>
+    </div>
+    <h3>Designed in New York</h3>
+    <section>
+      <h3>Portfolio</h3>
+        <p>Coming Soon</p>
+      <h3>Team</h3>
+        <p>We're Hiring</p>
+      <h3>Contact</h3>
+        <p>Phone: (555)-555-5555</p>
+        <p>E-mail: test@example.com</p>
+        <p>Twitter: @test</p>
+    </section>
+    <footer>
+      <a>&copy; Broadway 2017</a>
+      <a href="#">Home</a>
+      <a href="#">Process</a>
+      <a href="#">Work</a>
+      <a href="#">Team</a>
+      <a href="#">Contact</a>
+    </footer>
   </body>
 </html>
