start after sleep

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p>Twitter: @test</p>
     </section>
     <footer>
-      <a>&copy; Broadway 2017</a>
+      <a class="copyright">&copy; Broadway 2017</a>
       <a href="#">Home</a>
       <a href="#">Process</a>
       <a href="#">Work</a>
