--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <header>
       <h1>Broadway Design</h1>
       <nav>
-        <a href="#">Home</a><br>
-        <a href="#">Process</a><br>
-        <a href="#">Work</a><br>
-        <a href="#">Team</a><br>
+        <a href="#">Home</a><br><br>
+        <a href="#">Process</a><br><br>
+        <a href="#">Work</a><br><br>
+        <a href="#">Team</a><br><br>
         <a href="#">Contact</a>
       </nav>
     </header>
@@ -28,7 +28,7 @@
           <img src="resources/images/execute.svg" alt="execute symbol">
           <p>We put everything we have into our work.</p>
     </div>
-    <h3>Designed in New York</h3>
+    <h3 class="newyork">Designed in New York</h3>
     <section>
       <h3>Portfolio</h3>
         <p>Coming Soon</p>
